<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media_button_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>

    <string name="settings_screen_title">Настройки</string>
    <string name="settings_theme_title">Темная тема</string>
    <string name="settings_share_title">Поделиться приложением</string>

    <string name="settings_share_url">https://practicum.yandex.ru/catalog/programming/?from=main_programming_card</string>

    <string name="settings_support_title">Написать в поддержку</string>

    <string name="settings_support_address">b.frost@yandex.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="settings_user_title">Пользовательское соглашение</string>

    <string name="settings_user_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_screen_title">Поиск</string>
    <string name="search_screen_edittext_hint">Поиск</string>
    <string name="search_screen_nothing_message">Ничего не нашлось</string>
    <string name="search_screen_problem_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update_button_text">Обновить</string>

    <!-- strings for trackList   -->

    <string name="track_view_first_line_test_title">Here Comes The Sun (Remastered with digital quality</string>
    <string name="track_view_second_line_test_title">The Beatles • 4:01</string>

    <!-- strings for searchHistory -->

    <string name="search_history_title">История поиска</string>
    <string name="button_clear_text">Очистить историю</string>

    <!-- strings for audiopleer -->

    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="year_title">Год</string>
    <string name="album_title">Альбом</string>
    <string name="duration_title">Длительность</string>

    <string name="country_check_value">Объединенные арабские эмираты</string>
    <string name="genre_check_value">Rock</string>
    <string name="year_check_value">1969</string>
    <string name="album_check_value">Yesterday</string>
    <string name="duration_check_value">2:00</string>

    <string name="track_duration_check_value">00:00</string>

    <string name="play_button_description">Bocпроизведение</string>
    <string name="add_button_description">Добавить</string>
    <string name="favorites_button_description">Избранное</string>
    <string name="arrow_back_button_description">Назад</string>

    <string name="add_track_to_playlist_phrase_1">Трек уже добавлен в плейлист</string>
    <string name="add_track_to_playlist_phrase_2">Добавлено в плейлист</string>

    <!-- strings for media -->

    <string name="media_screen_title">Медиатека</string>

    <string name="favorite_tracks_fragment_empty_message">Ваша медиатека пуста</string>

    <string name="button_new_playlist_text">Новый плейлист</string>

    <string name="playlists_fragment_empty_message">Вы не создали\n ни одного плейлиста</string>

    <string name="media_favorite_tracks_tab_title">Избранные треки</string>
    <string name="media_playlists_tab_title">Плейлисты</string>

    <!-- strings for bottomnavigation_menu -->

    <string name="bottomnavigation_menu_search_title">Поиск</string>
    <string name="bottomnavigation_menu_media_title">Медиатека</string>
    <string name="bottomnavigation_menu_settings_title">Настройки</string>

    <!-- strings for newplaylist -->

    <string name="create_playlist_screen_title">Новый плейлист</string>
    <string name="create_playlist_name_edittext_title">Название*</string>
    <string name="create_playlist_description_edittext_title">Описание</string>

    <string name="create_playlist_button_text">Создать</string>

    <string name="create_playlist_backpressed_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_backpressed_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_backpressed_dialog_cancel_button">Отмена</string>
    <string name="create_playlist_backpressed_dialog_yes_button">Да</string>

    <string name="create_playlist_toast_phrase_first_part">Плейлист</string>
    <string name="create_playlist_toast_phrase_second_part">создан</string>
    <string name="custom_toast_check_value">Это мой личный тост</string>

    <!-- strings for player_bottomsheet -->

    <string name="player_bottomsheet_title">Добавить в плейлист</string>

    <!-- strings for playlist_view -->

    <string name="playlist_title_check_value">Best songs 2021</string>
    <string name="playlist_tracksnumber_check_value">98 треков</string>
    <string name="playlist_tracks_number_root">трек</string>
    <string name="playlist_tracks_number_ending_1">а</string>
    <string name="playlist_tracks_number_ending_2">ов</string>

    <!-- strings for fragment_view_playlist -->

    <string name="playlist_duration_check_value">300 минут • 98 треков</string>
    <string name="playlist_descripion_check_value">2022</string>
    <string name="playlist_name_check_value">Best songs 2021</string>

    <plurals name="plurals_for_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <plurals name="plurals_for_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="share_menu_item">Поделиться</string>
    <string name="remove_menu_item">Удалить плейлист</string>
    <string name="edit_menu_item">Редактировать информацию</string>

    <string name="share_menu_toast_phrase">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист</string>

    <string name="dialog_positive_button">ДА</string>
    <string name="dialog_negative_button">НЕТ</string>
    <string name="dialog_neutral_button">ОТМЕНА</string>

    <string name="no_tracks_message">В этом плейлисте нет треков</string>

    <!-- strings for fragment_edit_playlist -->

    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_button">Сохранить</string>
</resources>