<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_screen_padding"
        style="@style/MainActivityLayoutColorStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_screen_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

        <Button
            style="@style/MainActivityButtonStyle"
            android:id="@+id/button_search"
            android:layout_marginTop="40dp"
            android:text="@string/search_button_text"
            app:icon="@drawable/ic_search"
            />

        <Button
            style="@style/MainActivityButtonStyle"
            android:id="@+id/button_media"
            android:text="@string/media_button_text"
            app:icon="@drawable/ic_media"
            />

        <Button
            style="@style/MainActivityButtonStyle"
            android:id="@+id/button_settings"
            android:text="@string/settings_button_text"
            app:icon="@drawable/ic_settings"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>