<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/SettingsActivityLayoutColorStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            style="@style/SettingsActivityTitleColorStyle">

            <ImageView
                android:id="@+id/button_back"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"

                android:layout_gravity="center_vertical"

                android:src="@drawable/ic_arrowback"
                style="@style/SettingsActivityTitleColorStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"

                android:layout_marginLeft="66dp"
                android:text="@string/settings_screen_title"

                android:textSize="22sp"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                style="@style/SettingsActivityTitleColorStyle"/>
        </FrameLayout>

        <FrameLayout
            style="@style/SettingsActivityBarStyle"

            android:layout_marginTop="24dp"
            android:paddingRight="6dp">

            <TextView
                style="@style/SettingsActivityBarTitleStyle"

                android:text="@string/settings_theme_title"/>

            <Switch
                android:layout_width="@dimen/settings_switch_width"
                android:layout_height="@dimen/settings_switch_height"

                android:layout_gravity="end|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_share"
            style="@style/SettingsActivityBarStyle">

            <TextView
                style="@style/SettingsActivityBarTitleStyle"

                android:text="@string/settings_share_title"/>

            <ImageView
                style="@style/SettingsActivityBarIconStyle"

                android:src="@drawable/ic_share" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_support"
            style="@style/SettingsActivityBarStyle">

            <TextView
                style="@style/SettingsActivityBarTitleStyle"

                android:text="@string/settings_support_title"/>

            <ImageView
                style="@style/SettingsActivityBarIconStyle"

                android:src="@drawable/ic_support"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_user"
            style="@style/SettingsActivityBarStyle">

            <TextView
                style="@style/SettingsActivityBarTitleStyle"

                android:text="@string/settings_user_title"/>

            <ImageView
                style="@style/SettingsActivityBarIconStyle"

                android:src="@drawable/ic_arrowforward"/>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>