<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".playlists.ui.CreatePlaylistFragment">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:background="@null"
        android:contentDescription="@string/arrow_back_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"

        app:srcCompat="@drawable/ic_arrowback" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow"

        android:layout_marginLeft="12dp"

        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create_playlist_screen_title"
        android:textFontWeight="500"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/playlist_image"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"

        android:layout_marginTop="30dp"

        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"

        android:background="@drawable/playlist_image_place" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name"
        style="@style/CreatePlaylistFragmentTextInputLayoutStyle"

        android:layout_width="0dp"
        android:layout_height="56dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_image"

        android:layout_marginTop="32dp">

    <EditText
        android:id="@+id/playlistNameEditText"
        style="@style/CreatePlaylistFragmentEditTextStyle"

        android:hint="@string/create_playlist_name_edittext_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description"
        style="@style/CreatePlaylistFragmentTextInputLayoutStyle"

        android:layout_width="0dp"
        android:layout_height="56dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"

        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/playlistDescriptionEditText"
            style="@style/CreatePlaylistFragmentEditTextStyle"

            android:hint="@string/create_playlist_description_edittext_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreatePlaylist"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:text="@string/create_playlist_button_text"

        android:textAllCaps="false"

        android:textColor="@color/create_playlist_create_button_text_color"

        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textSize="16sp"

        android:visibility="visible"
        tools:visibility="visible"

        android:enabled="false"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginHorizontal="17dp"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"

        android:background="@drawable/playlist_createbutton_selector" />
</androidx.constraintlayout.widget.ConstraintLayout>